--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=tRlfro1oqatrlq-jopR$
-DB_NAME=AmazonConnectPricingCalculator
-PORT=5000
+DB_PASS=tRlfro1oqatrlq-jopR$
+DB_NAME=awscalcu
